<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.NewPersonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor">


        <EditText
            android:id="@+id/personName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nameText"
            android:inputType="textPersonName"
            android:textColor="@color/yellow"
            android:textColorHint="@color/hintColor"
            app:layout_constraintBottom_toTopOf="@+id/ageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/ageText"
            android:layout_width="169dp"
            android:layout_height="46dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/ageStr"
            android:inputType="textPersonName"
            android:textColor="@color/yellow"
            android:textColorHint="@color/hintColor"
            app:layout_constraintBottom_toTopOf="@+id/bad"
            app:layout_constraintStart_toStartOf="@+id/personName" />

        <EditText
            android:id="@+id/bad"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:ems="10"
            android:hint="@string/badStr"
            android:inputType="textPersonName"
            android:textColor="@color/yellow"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ageText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/good"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/goodText"
            android:inputType="textPersonName"
            android:textColor="@color/yellow"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="@+id/personName"
            app:layout_constraintTop_toTopOf="@+id/bad" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/preHistoryPersStr"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/personDescription"
            app:layout_constraintEnd_toEndOf="@+id/good"
            app:layout_constraintStart_toStartOf="@+id/bad"
            app:layout_constraintTop_toBottomOf="@+id/good" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/letSPlay"
            android:textColor="@color/backColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/personDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:scrollbarThumbVertical="@color/buttonColor"
            android:scrollbars="vertical"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/personSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:maxHeight="60dp"
            android:scrollbarThumbVertical="@color/buttonColor"
            android:scrollbars="vertical"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/startGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/darkestSecretStr"

            android:textColor="@color/yellow"
            app:layout_constraintBottom_toTopOf="@+id/personSecret"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:src="@drawable/female"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="42dp"
            android:layout_height="41dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/male"
            app:layout_constraintEnd_toStartOf="@+id/sexGroup"
            app:layout_constraintTop_toBottomOf="@+id/personName" />

        <RadioGroup
            android:id="@+id/sexGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/ageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>